adjust banner conditionally; integarate footer and header

--- a/banner.html
+++ b/banner.html
@@ -2,6 +2,28 @@
   <div class="banner-inner">
     <span id="logo"><span class="octicon octicon-mark-github"></span></span>
 
+  {% if (next or prev) and 'index' not in pagename %}
+    {% if theme_repo %}
+    <a href="https://github.com/{{ theme_repo }}" class="button fork"><strong>View On GitHub</strong></a>
+    {% endif %}
+
+    <div class="downloads">
+      <span style="text-transform: none; font-size: 120%;"><u>{{ pagename }}</u></span>
+      <ul>
+        {% if parents %}
+        <li><a href="{{ parents[0].link|e }}" class="button">&#x21E7;</a></li>
+        {% else %}
+        <li><a href="index.html" class="button">&#x21E7;</a></li>
+        {% endif %}
+        {% if prev %}
+        <li><a href="{{ prev.link|e }}" class="button">&#x21E6;</a></li>
+        {% endif %}
+        {% if next %}
+        <li><a href="{{ next.link|e }}" class="button">&#x21E8;</a></li>
+        {% endif %}
+      </ul>
+    </div>
+  {% else %}
     {% if theme_repo %}
     <a href="https://github.com/{{ theme_repo }}" class="button fork"><strong>View On GitHub</strong></a>
     <div class="downloads">
@@ -12,5 +34,7 @@
       </ul>
     </div>
     {% endif %}
+  {% endif %}
   </div>
 </div>
+
