--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <header>
     <h1>
         <a href="/">RiboKit</a> 
-        {% if theme_title %}
-        : <a href="{{ theme_root }}">{{ theme_title }}</a>
+        {% if project %}
+        : <a href="index.html">{{ project }}</a>
         {% endif %}
     </h1>
     <p>{{ theme_description }}</p>
