--- a/banner.html
+++ b/banner.html
@@ -2,11 +2,12 @@
   <div class="banner-inner">
     <span id="logo"><span class="octicon octicon-mark-github"></span></span>
 
-  {% if (next or prev) and pagename != "index" %}
     {% if theme_github_repo %}
     <a href="https://github.com/{{ theme_github_repo }}" class="button fork"><strong>View On GitHub</strong></a>
     {% endif %}
+    {% include "searchbox.html" %}
 
+    {% if (next or prev) and pagename != "index" %}
     <div class="downloads">
       <span style="text-transform: none; font-size: 120%;"><u>{{ pagename }}</u></span>
       <ul>
@@ -25,7 +26,6 @@
     </div>
   {% else %}
     {% if theme_github_repo %}
-    <a href="https://github.com/{{ theme_github_repo }}" class="button fork"><strong>View On GitHub</strong></a>
     <div class="downloads">
       <span>Downloads</span>
       <ul>
