--- a/layout.html
+++ b/layout.html
@@ -23,6 +23,12 @@
     <link rel="stylesheet" href="{{ pathto('_static/css/styles.css', 1) }}" type="text/css" />
     <link rel="stylesheet" href="{{ pathto('_static/css/github-dark.css', 1) }}" type="text/css" />
 
+    {% if not embedded %}
+      {% if use_opensearch %}
+        <link rel="search" type="application/opensearchdescription+xml" title="{% trans docstitle=docstitle|e %}Search within {{ docstitle }}{% endtrans %}" href="{{ pathto('_static/opensearch.xml', 1) }}"/>
+      {% endif %}
+    {% endif %}
+
     {% for cssfile in css_files %}
       <link rel="stylesheet" href="{{ pathto(cssfile, 1) }}" type="text/css" />
     {% endfor %}
@@ -59,7 +65,7 @@
     {%- block extrahead %} {% endblock %}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-    <script src="{{ pathto('_static/js/main.js', 1) }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -125,6 +131,25 @@
     </p>
 
     {% include "footer.html" %}
+
+    {% if not embedded %}
+      <script type="text/javascript">
+          var DOCUMENTATION_OPTIONS = {
+              URL_ROOT:'{{ url_root }}',
+              VERSION:'{{ release|e }}',
+              COLLAPSE_INDEX:false,
+              FILE_SUFFIX:'{{ '' if no_search_suffix else file_suffix }}',
+              HAS_SOURCE:  {{ has_source|lower }}
+          };
+      </script>
+      {%- for scriptfile in script_files %}
+        <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
+      {%- endfor %}
+    {% endif %}
+
+    <script type="text/javascript" src="{{ pathto('_static/js/main.js', 1) }}"></script>
+    <script type="text/javascript" src="{{ pathto('_static/js/theme.js', 1) }}"></script>
+
     {%- block footer %} {% endblock %}
   </body>
 </html>
