--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <nav>
-    <ul>
+    <ul style="margin-bottom:0;">
         <li class="tag-h1"><a href="index.html">{{ shorttitle }}</a></li>
     </ul>
     {% block menu %}
