--- a/banner.html
+++ b/banner.html
@@ -3,7 +3,7 @@
     <span id="logo"><span class="octicon octicon-mark-github"></span></span>
 
     {% if theme_github_repo %}
-    <a href="https://github.com/{{ theme_github_repo }}" class="button fork"><strong>View On GitHub</strong></a>
+    <a href="https://github.com/{{ theme_github_repo }}" target="_blank" class="button fork"><strong>View On GitHub</strong></a>
     {% endif %}
 
     {% include "searchbox.html" %}
@@ -40,8 +40,8 @@
     <div class="downloads">
       <span>Downloads</span>
       <ul>
-        <li><a href="https://github.com/{{ theme_github_repo }}/zipball/master" class="button">ZIP</a></li>
-        <li><a href="https://github.com/{{ theme_github_repo }}/tarball/master" class="button">TAR</a></li>
+        <li><a href="https://github.com/{{ theme_github_repo }}/zipball/master" target="_blank" class="button">ZIP</a></li>
+        <li><a href="https://github.com/{{ theme_github_repo }}/tarball/master" target="_blank" class="button">TAR</a></li>
       </ul>
     </div>
     {% endif %}
