fix nav toctree ul / line-block / py-exc code

--- a/layout.html
+++ b/layout.html
@@ -86,14 +86,10 @@
     <p class="wrapper">
     {%- if show_sphinx %}
       <small>Built with</small>
-      <a href="http://sphinx-doc.org/">Sphinx</a>
+      <a href="http://sphinx-doc.org/" target="_blank">Sphinx</a>
       <small>using a</small>
-      <a href="https://github.com/t47io/ribokit-Sphinx-theme">RiboKit Theme</a>
-      <small>
-        adapted from
-        <a href="https://github.com/mattgraham/leapday">Leap Day</a> 
-        , Hosted on
-      </small> GitHub Pages
+      <a href="https://github.com/t47io/ribokit-Sphinx-theme" target="_blank">RiboKit Theme</a>
+      <small>. Hosted on</small> GitHub Pages.
     {%- endif %}
     </p>
 
