--- a/layout.html
+++ b/layout.html
@@ -7,6 +7,7 @@
   {%- set titlesuffix = "" %}
 {%- endif %}
 
+
 <!doctype html>
 <html>
   <head>
@@ -20,8 +21,13 @@
       <link rel="shortcut icon" href="{{ pathto('_static/' + favicon, 1) }}"/>
     {% endif %}
 
-    <link rel="stylesheet" href="{{ pathto('_static/css/styles.css', 1) }}" type="text/css" />
-    <link rel="stylesheet" href="{{ pathto('_static/css/github-dark.css', 1) }}" type="text/css" />
+    {% if theme_ribokit_flag %}
+      <link rel="stylesheet" href="/assets/css/sphinx-styles.css" type="text/css" />
+      <link rel="stylesheet" href="/assets/css/github-dark.css" type="text/css" />
+    {% else %}
+      <link rel="stylesheet" href="{{ pathto('_static/css/styles.css', 1) }}" type="text/css" />
+      <link rel="stylesheet" href="{{ pathto('_static/css/github-dark.css', 1) }}" type="text/css" />
+    {% endif %}
 
     {% if not embedded %}
       {% if use_opensearch %}
@@ -139,12 +145,22 @@
           };
       </script>
       {%- for scriptfile in script_files %}
-        <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
+        {% if 'underscore' in scriptfile %}
+          <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        {% elif 'jquery' in scriptfile %}
+        {% else %}
+          <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
+        {% endif %}
       {%- endfor %}
     {% endif %}
 
-    <script type="text/javascript" src="{{ pathto('_static/js/main.js', 1) }}"></script>
-    <script type="text/javascript" src="{{ pathto('_static/js/theme.js', 1) }}"></script>
+    {% if theme_ribokit_flag %}
+      <script type="text/javascript" src="/assets/js/sphinx-main.js"></script>
+      <script type="text/javascript" src="/assets/js/sphinx-theme.js"></script>
+    {% else %}
+      <script type="text/javascript" src="{{ pathto('_static/js/main.js', 1) }}"></script>
+      <script type="text/javascript" src="{{ pathto('_static/js/theme.js', 1) }}"></script>
+    {% endif %}
 
     {%- block footer %} {% endblock %}
   </body>
