--- a/search.html
+++ b/search.html
@@ -1,7 +1,8 @@
 
 {%- extends "layout.html" %}
-{% set title = _('Search') %}
-{% set script_files = script_files + ['_static/searchtools.js'] %}
+{%- set title = _('Search') %}
+{%- set script_files = script_files + ['_static/searchtools.js'] %}
+
 {% block footer %}
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("{{ pathto('searchindex.js', 1) }}"); });
@@ -11,6 +12,7 @@
   <script type="text/javascript" id="searchindexloader"></script>
   {{ super() }}
 {% endblock %}
+
 {% block body %}
   <noscript>
   <div id="fallback" class="admonition warning">
