--- a/layout.html
+++ b/layout.html
@@ -70,6 +70,9 @@
     {%- block extrahead %} {% endblock %}
 
     <script type="text/javascript">
+      if (window.location.protocol.indexOf('https') == -1 && window.location.hostname.indexOf('.github.io') != -1) { window.location.href = window.location.href.replace('http:', 'https:'); }
+    </script>
+    <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
