--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
   <p style="margin:0;">
       <small>Project maintained by</small>
       <br/>
-      <a href="https://github.com/t47io" rel="noopener noreferrer external"><b>t47io</b></a>&nbsp;
+      <a href="https://github.com/DasLab"><b>Das Lab</b></a>&nbsp;
       {% if theme_author %}
         <br/>
         <small>Page created by</small>
